# vitOTT

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  vitOTT.jucer
.github/workflows/: builds.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/vitOTT.xcodeproj/: project.pbxproj
Builds/VisualStudio2019/: resources.rc  vitOTT.sln  vitOTT_SharedCode.vcxproj  vitOTT_SharedCode.vcxproj.filters  vitOTT_StandalonePlugin.vcxproj  vitOTT_StandalonePlugin.vcxproj.filters  vitOTT_VST3.vcxproj  vitOTT_VST3.vcxproj.filters
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginProcessor.cpp  PluginProcessor.h
Source/vital_dsp/: compressor.cpp  compressor.h  linkwitz_riley_filter.cpp  linkwitz_riley_filter.h
Source/vital_dsp/framework/: poly_utils.h  poly_values.h
Source/vital_dsp/utilities/: smooth_value.cpp
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/bridge/: full_interface.cpp  full_interface.h  synth_base.cpp  synth_base.h  synth_gui_interface.cpp  synth_gui_interface.h
src/vital_dsp/: compressor.cpp  compressor.h  constants.h
src/vital_dsp/framework/: processor.cpp  processor.h  synth_constants.h  synth_module.h  synth_parameters.cpp  synth_parameters.h
src/vital_dsp/utilities/: smooth_value.h
src/vital_ui/: compressor_editor.cpp  compressor_section.cpp  compressor_section.h  open_gl_component.cpp  open_gl_component.h  open_gl_image.cpp  open_gl_image_component.cpp  open_gl_multi_quad.cpp  popup_browser.cpp  popup_browser.h  synth_button.cpp  synth_button.h  synth_section.cpp  synth_section.h  synth_slider.cpp  synth_slider.h  text_selector.cpp  text_selector.h
src/vital_ui/look_and_feel/: paths.h  shaders.cpp  skin.cpp  synth_strings.h
